# YouthHealthSite

./: db.sqlite3  main.py  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
static/css/: style.css
templates/: advocacy.html  browse.html  change.html  crud.html  error.html  find_service.html  footer.html  header.html  home.html  layout.html  login.html  nav.html  sign_up.html
