[tool.poetry]
name = "repl_python3_YouthHealthSite"
version = "0.1.0"
description = ""
authors = ["EvelynAtlas <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
flask-sqlalchemy = "^2.5.1"
sqlalchemy = "^1.4.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
